--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             <div class="download-link-container">
                 <div class="link-text">
                     <i class="fas fa-link"></i>
-                    https://igetintopc.com/waiting-resource.php
+                    https://drive.google.com/file/d/1gqxvR8Yk5qhdWES820DBASDAPl1R2eNO/view?usp=sharing
                 </div>
                 <a href="#" class="download-btn" id="downloadBtn">
                     <i class="fas fa-cloud-download-alt"></i>
@@ -576,7 +576,7 @@
             e.preventDefault();
             
             // Simulation de téléchargement
-            const downloadUrl = "https://igetintopc.com/waiting-resource.php";
+            const downloadUrl = "https://drive.google.com/file/d/1gqxvR8Yk5qhdWES820DBASDAPl1R2eNO/view?usp=sharing";
             
             // Afficher une notification (simulée)
             alert("Le téléchargement va commencer...\nURL : " + downloadUrl);
@@ -622,4 +622,5 @@
         console.log("Bienvenue sur la page d'aide d'ArcGIS !");
     </script>
 </body>
+
 </html>
