--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
             const mailtoLink = `mailto:${email}?subject=${encodeURIComponent(subject)}`;
             
             // Ouvrir le client mail par défaut
-            window.location.href = mailtoLink;
+            window.location.href = ;
             
             // Feedback visuel
             this.style.backgroundColor = "#4CAF50";
@@ -624,3 +624,4 @@
 </body>
 
 </html>
+
