--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
             {
                 number: 1,
                 image: "1.png",
-                caption: "Étape 1 : Après l'installation, vous faites extraire le dossier. S'il demande un code, écrivez: igetintopc.com"
+                caption: "Étape 1 : Après le téléchargement, vous faites extraire le dossier."
             },
             {
                 number: 2,
@@ -560,7 +560,7 @@
             {
                 number: 8,
                 image: "8.png",
-                caption: "Étape 6 : Vous revenez au dossier extré et vous ouvrez le dossier Crack puis vous copiez le Crack qui est là"
+                caption: "Étape 6 : Vous revenez au dossier extré et vous ouvrez le dossier Crack puis vous copiez le Crack qui est à l'intérieur de ce dossier"
             },
             {
                 number: 9,
@@ -570,7 +570,7 @@
             {
                 number: 10,
                 image: "10.png",
-                caption: "Étape 6 : Vous faites Bouton droit sur la même application et cliquez encore sur Ouvrir l'emplacement du fichier"
+                caption: "Étape 6 : Vous cliquez Bouton droit sur la même application et cliquez encore sur Ouvrir l'emplacement du fichier"
             },
             {
                 number: 11,
@@ -696,3 +696,4 @@
     </script>
 </body>
 </html>
+
