--- a/index.html
+++ b/index.html
@@ -508,14 +508,14 @@
         </div>
     </div>
     <div class="container">
-        <!-- Message de bienvenue Adobe -->
+        <!-- Message de bienvenue Mapinfo -->
         <div class="welcome-card">
             <div class="welcome-text"> 
                  vous trouvez ici le lien pour télécharger le logiciel <b>MapInfo</b>
             </div>
         </div>
     </div>
-        <!-- Section téléchargement -->
+        <!-- Section téléchargement Mapinfo -->
             <div class="download-link-container1">
                 <div class="link-text">
                     <i class="fas fa-link"></i>
@@ -546,7 +546,7 @@
                     <i class="fas fa-link"></i>
                     Adobe illustrator
                 </div>
-                <a href="#" class="download-btn1" id="downloadBtn2">
+                <a href="#" class="download-btn2" id="downloadBtn2">
                     <i class="fas fa-cloud-download-alt"></i>
                     Télécharger
                 </a>
@@ -723,7 +723,7 @@
             e.preventDefault();
             
             // Simulation de téléchargement
-            const downloadUrl = "https://ay-max-go.github.io/AYB/";
+            const downloadUrl = "https://drive.google.com/file/d/1ksMPg_onE2zHMujoirIW_cxIZJJ2WbeA/view?usp=sharing";
             
             // Afficher une notification (simulée)
             alert("Le téléchargement va commencer...\nURL : " + downloadUrl);
@@ -770,5 +770,6 @@
     </script>
 </body>
 </html>
+
 
 
