--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
             },
             {
                 number: 8,
-                image: "8.png",
+                image: "8'.png",
                 caption: "Étape 6 : Vous revenez au dossier extré et vous ouvrez le dossier Crack puis vous copiez le Crack qui est là"
             },
             {
@@ -770,6 +770,7 @@
     </script>
 </body>
 </html>
+
 
 
 
